--- a/todo.org
+++ b/todo.org
@@ -3,9 +3,11 @@
 * References:
 
 + [[https://github.com/p3r7/awesome-elisp][awesome-lisp.]]
-+  https://www.reddit.com/r/emacs/comments/9lv1fd/a_simple_guide_to_writing_publishing_emacs/
++ https://www.reddit.com/r/emacs/comments/9lv1fd/a_simple_guide_to_writing_publishing_emacs/
 
 * Inbox
+
+** TODO [#B] https://github.com/zevlg/telega.el?
 
 ** TODO Mozc package may need this... Either that or justify why download the entire mozc package...
 
@@ -95,3 +97,5 @@ Inside @nvm.el
 ** TODO [[https://bunpro.jp/api#getting-started][Look into the bunpro API]], excuse to use the 'rest' module.
 
 ** TODO [#B] Add org-super-agenda and better divide my tasks headings..
+** TODO [#B] Tryout [[yt:vz9aLmxYJB0][org-slide-mode,]] the `+present` flag works badly.
+** TODO [#A] Create a ~dan/eshell-string-buffer-name~ function.
