--- a/config.org
+++ b/config.org
@@ -736,14 +736,17 @@ marker, indent and syntax-based code folding for as many languages as possible.
 
 Some keybindings include:
 
-| Keybind            | Description               |
-|--------------------+---------------------------|
-| =C-c C-f C-f=        | Fold region               |
-| =C-c C-f C-u= or =C `= | Unfold region             |
-| =C-c C-f C-d=        | Delete folded region      |
-| =C-c C-a C-f=        | Refold all regions        |
-| =C-c C-a C-u=        | Unfold all regions        |
-| =C-c C-a C-d=        | Delete all folded regions |
+| Keybind | Description               |
+|---------+---------------------------|
+| =z f=     | Fold region               |
+| =z o=     | Unfold region             |
+| =z a=     | Toogle fold               |
+| =z d=     | Delete folded region      |
+| =z m=     | Refold all regions        |
+| =z r=     | Unfold all regions        |
+| =z E=     | Delete all folded regions |
+| =z j=     | Jump to next fold         |
+| =z k=     | Jump to previous fold     |
 
 #+begin_src elisp :tangle init.el
        ;;(format +onsave)  ; automated prettiness
