--- a/config.org
+++ b/config.org
@@ -42,6 +42,10 @@
         - [[#evil][evil]]
         - [[#file-templates][file-templates]]
         - [[#fold][fold]]
+        - [[#lispy][lispy]]
+        - [[#parinfer][parinfer]]
+        - [[#snippets][snippets]]
+        - [[#word-wrap][word-wrap]]
       - [[#emacs][:emacs]]
       - [[#term][:term]]
       - [[#checkers][:checkers]]
@@ -66,6 +70,7 @@
       - [[#nord-powered-aesthetics][Nord powered aesthetics.]]
     - [[#splash-screen][Splash Screen]]
     - [[#rainbow-delimeters][Rainbow Delimeters]]
+    - [[#word-wrap-1][Word wrap]]
     - [[#modeline-1][Modeline]]
     - [[#projectile][Projectile]]
     - [[#treemacs-1][Treemacs]]
@@ -369,7 +374,7 @@ look a the source code, see what they define and configure, before deciding to
 use a module.
 
 Some modules can be wrapped in a list and given 'flags', that activate extra
-optional configuration. The list must have the module name as the car, the flags
+optional configuration. The list must have the module name as the head, the flags
 as the tail.
 
 **** :input
@@ -647,7 +652,8 @@ become the main focus. It can be toggled on and of with =SPC t z=.
        zen               ; distraction-free coding or writing
 #+end_src
 
-**** TODO :editor
+**** :editor
+
 ***** evil
 
 I prefer vim's keybindings to emacs and thankfully, =doom= offers first class
@@ -748,16 +754,72 @@ Some keybindings include:
 | =z j=     | Jump to next fold         |
 | =z k=     | Jump to previous fold     |
 
+***** lispy
+
+Lisp aware vim, brought to you by [[https://github.com/noctuid/lispyville][lispyville]]. It bring's changes to evil's
+movement and text objects in lisps. Only bad thing is that =evil-goggles= doesn't
+work with =lispyville='s commands. Bummer.
+
+=lispyville= is automatically activated for:
+
+- Common Lisp
+- Emacs Lisp
+- Scheme
+- Racket
+- [[http://docs.hylang.org/en/stable/][Hy]]
+- [[http://lfe.io/][LFE]]
+- Clojure
+
 #+begin_src elisp :tangle init.el
-       ;;(format +onsave)  ; automated prettiness
-       ;;god               ; run Emacs commands without modifier keys
-       ;;lispy             ; vim for lisp, for people who don't like vim
-       ;;multiple-cursors  ; editing in many places at once
-       ;;objed             ; text object editing for the innocent
-       ;;parinfer          ; turn lisp into python, sort of
-       ;;rotate-text       ; cycle region at point between text candidates
+       ;;format          ; automated prettiness
+       ;;god             ; run Emacs commands without modifier keys
+       lispy             ; vim for lisp, for people who don't like vim
+#+end_src
+
+***** parinfer
+
+#+begin_quote
+Parinfer is a proof-of-concept editor mode for Lisp programming languages. It
+will infer some changes to keep Parens and Indentation inline with one another.
+
+https://raw.githubusercontent.com/DogLooksGood/parinfer/a7c041454e05ec2b88333a73e72debaa671ed596/images/demo.gif
+#+end_quote
+
+Basically, it's a another editing helper package for lisp, in particular:
+
+- Emacs Lisp
+- Clojure
+- Scheme
+- Lisp
+- Racket
+- Hy
+
+#+begin_src elisp :tangle init.el
+       ;;multiple-cursors    ; editing in many places at once
+       ;;objed               ; text object editing for the innocent
+       parinfer              ; turn lisp into python, sort of
+#+end_src
+
+***** snippets
+
+#+begin_quote
+This module adds snippets to Emacs, powered by yasnippet.
+#+end_quote
+
+#+begin_src elisp :tangle init.el
+       ;;rotate-text     ; cycle region at point between text candidates
        snippets          ; my elves. They type so I don't have to
-       ;;word-wrap         ; soft wrapping with language-aware indent
+#+end_src
+
+***** word-wrap
+
+#+begin_quote
+This module adds a minor-mode ~+word-wrap-mode~, which intelligently wraps long
+lines in the buffer without modifying the buffer content.
+#+end_quote
+
+#+begin_src elisp :tangle init.el
+       word-wrap         ; soft wrapping with language-aware indent
 #+end_src
 
 **** TODO :emacs
@@ -852,7 +914,7 @@ Which complement the [[https://www.gnu.org/software/emacs/refcards/pdf/dired-ref
        ;;(dart +flutter)   ; paint ui and not much else
        ;;elixir            ; erlang done right
        ;;elm               ; care for a cup of TEA?
-       emacs-lisp        ; drown in parentheses
+       emacs-lisp          ; drown in parentheses
        ;;erlang            ; an elegant language for a more civilized age
        ;;ess               ; emacs speaks statistics
        ;;faust             ; dsp, but you get to keep your soul
@@ -1233,6 +1295,16 @@ Matching pairs draw with the same face color, making them easily identifiable.
 (add-hook! prog-mode #'rainbow-delimiters-mode-enable)
 #+end_src
 
+*** Word wrap
+
+I work with lot's of files that have very long lines, which can be hard to read
+sometimes. ~+word-wrap-mode~ helps to make these files more readable without
+changing the buffer contents.
+
+#+begin_src elisp
+(+global-word-wrap-mode +1)
+#+end_src
+
 *** Modeline
 
 The default =doom-modeline= is great, the only thing is that I want it to show me
@@ -1470,13 +1542,6 @@ subheading change KEYWORD state.
     (add-hook! 'org-after-todo-statistics-hook #'dan/org-after-todo-statistics-preserve-todo-state)
 #+end_src
 
-I like my org files to not exceed the ~fill-collumn~ limit, so for them I activate
-~auto-fill-mode~.
-
-#+begin_src elisp
-    (add-hook! org-mode #'auto-fill-mode)
-#+end_src
-
 In org buffers, remove the line number fringe.
 
 #+begin_src elisp
@@ -1506,7 +1571,6 @@ Load and activate org-edna together with org-mode.
   :hook
   '(org-mode . org-edna-mode)
 #+end_src
-
 Make =org-edna= to trigger in any state change except done.
 
 #+begin_src elisp
