--- a/todo.org
+++ b/todo.org
@@ -60,7 +60,7 @@ If realiable, this could be added to the =japanese= module, as a =+mozc= flag.
 Installation of the config may require to manually uncomment 'literate' module
 and run doom sync, create script for that?
 
-*** Use [[doom-docs:getting_started.org][doctor.el]] to detect if nvm is installed.
+*** HOLD Use [[doom-docs:getting_started.org][doctor.el]] to detect if nvm is installed.
 
 Unfortunatly, this feature cannot be implemented because there is no support for
 it in doom emacs. However, I opened a [[https://github.com/hlissner/doom-emacs/issues/4190][issue]] in doom-emacs repo requesting this
@@ -97,4 +97,5 @@ Inside @nvm.el
 ** TODO [[https://bunpro.jp/api#getting-started][Look into the bunpro API]], excuse to use the 'rest' module.
 ** TODO [#B] Add org-super-agenda and better divide my tasks headings..
 ** TODO [#B] Tryout [[yt:vz9aLmxYJB0][org-slide-mode,]] the `+present` flag works badly.
-** TODO Create a eshell/alias with nvm-exec https://jloubert.com/blog/eshell-nvm/
+** HOLD Create a eshell/alias with nvm-exec https://jloubert.com/blog/eshell-nvm/
+** TODO Deprecated ~nvm~ since I don't really use it anymore.
